[next release]
  new data  (thanks to Elisa Sani)
    organic/C2H6O - ethanol/Sani.yml
    organic/C2H6O - ethanol/Sani-formula.yml
    organic/C3H8O - propanol/Sani.yml
    organic/C3H8O - propanol/Sani-formula.yml
  modified (re-formatted) data
    -- organic/C2H6O2 - ethylene glycol/Sani_and_Otanicar.yml 
    ++ organic/C2H6O2 - ethylene glycol/Otanicar.yml - only Otanicar's absorption data
    ++ organic/C3H8O - propanol/Sani-formula.yml - dispersion formula for vis/NIR + Sani's absorption data for the range of formula validity
  new data (thanks to Vincent Vandalon, Eindhoven University of Technology, the Netherlands for contributing via GitHub!)
    main/MoO3/Vos.yml
    main/MoS2/Beal.yml
    main/MoS2/Yim-1.99um.yml
    main/MoS2/Yim-3.01um.yml
    main/MoS2/Yim-19.88um.yml
    main/MoS2/Zhang.yml
    main/MoSe2/Beal.yml
    main/MoTe2/Beal.yml
  updates
    main/Si/Chandler-Horowitz.yml: temperature ("Room temperature") added
    main/CrTe/DeBell-20K.yml: author list
    main/CrTe/DeBell-80K.yml: author list
    main/CrTe/DeBell-300K.yml: author list    
  new data (thanks to Konstantinos Moutzouris, Technological Educational Institute of Athens, Greece!)
    other/human body/liver/Giannios.yml
    other/human body/colon/Giannios-mucosa.yml
    other/human body/colon/Giannios-submucosa.yml
    other/human body/colon/Giannios-serosa.yml
  new data (thanks to Volodymyr Multian, Université de Savoie Mont Blanc, France, for providing data in yaml format! Thanks to Ryan Haislmaier and Venkatraman Gopalan, Pennsylvania State University, USA, for providing original data!)
    main/BiFeO3/Kumar.yml
  bug fixes
    library.yml: fixed "HIKARI-KF" book wrongly named "HIKARI-FK"

2016-05-25
  bug fixes (thanks to Julian Stark, Institut für Lasertechnologien in der Medizin und Messtechnik, Ulm, Germany!)
    main/Pb/Golovashkin-293.yml - fixed a bug in numerical data