@@ -1,0 +1,32 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "J. Koch. Über die Dispersion gasförmiger Körper im ultra-violetten Spektrum, Ark. Mat., Astron. Fys. <b>8</b>, Nr. 20 (1913)"
+COMMENTS: "14 °C"
+DATA:
+  - type: tabulated n
+    data: |
+        0.2302 1.000159425
+        0.2379 1.000157703
+        0.2447 1.000156297
+        0.2464 1.000155976
+        0.2535 1.000154684
+        0.2577 1.000154012
+        0.2675 1.000152526
+        0.2753 1.000151495
+        0.2760 1.000151415
+        0.2857 1.000150275
+        0.2894 1.000149878
+        0.2926 1.000149522
+        0.2968 1.000149115
+        0.3342 1.000146110
+        0.3544 1.000144945
+        0.3907 1.000143276
+        0.3985 1.000142981
+        0.4109 1.000142537
+        0.4917 1.000140532
+        0.5462 1.000139660
+INFO:
+    n_is_absolute: true
+    temperature: 14 °C
