@@ -1,0 +1,15 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "E. R. Peck and S. Hung. Refractivity and dispersion of hydrogen in the visible and near infrared, <a href=\"https://doi.org/10.1364/JOSA.67.001550\"><i>J. Opt. Soc. Am.</i> <b>67</b>, 1550-1554 (1977)</a>"
+COMMENTS: "Standard conditions (0 °C, 1 bar)"
+DATA:
+  - type: formula 6
+    range: 0.1680 1.6945
+    coefficients: 0 0.0148956 180.7 0.0049037 92
+INFO:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 0 °C
+    pressure: 1 bar
